# DiscordHookC

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
doc/: Doxyfile
example/: embed_example.c  simple_example.c
include/: color.h  dishook.h
src/: color.c  dishook.c  dishook_private.h
tests/: test_basic.c  test_env.c
